istio/canary-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ab-back-dr
  namespace: back-a
spec:
  host: ab-back.back-a.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
# 80% v1, 20% v2로 트래픽 분산
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ab-back-vs
  namespace: back-a
spec:
  hosts:
    - ab-back.back-a.svc.cluster.local
  http:
    - route:
        - destination:
            host: ab-back.back-a.svc.cluster.local
            subset: v1
          weight: 80
        - destination:
            host: ab-back.back-a.svc.cluster.local
            subset: v2
          weight: 20
