istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: global-dr
  namespace: istio-system
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 1000
    outlierDetection:               # Circuit Breaker
      consecutive5xxErrors: 5       # 5xx 5번 연속 시
      interval: 30s                 # 30초 간격으로 체크
      baseEjectionTime: 30s         # 30초 동안 제외
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
