istio/recovery-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ab-back-vs
  namespace: istio-system
spec:
  hosts:
    - ab-back.back-a.svc.cluster.local
  http:
    - retries:
        attempts: 3              # 3번 재시도
        perTryTimeout: 2s        # 시도당 타임아웃
        retryOn: 5xx,reset       # 5xx 에러, 연결 끊김 시 재시도
      timeout: 10s
      route:
        - destination:
            host: ab-back.back-a.svc.cluster.local
            port:
              number: 3000
